<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:gravity="center_horizontal" android:orientation="vertical" android:layout_height="fill_parent">
    <ImageView android:id="@+id/imageView1" android:src="@drawable/logobig" android:layout_height="300dip" android:layout_width="fill_parent"></ImageView>
    <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent">
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_gravity="center" android:layout_width="250dip">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/username" android:layout_height="wrap_content" android:layout_gravity="center"></TextView>
            <EditText android:text="" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtUsername"></EditText>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_gravity="center" android:layout_width="250dip">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/password" android:layout_height="wrap_content" android:layout_gravity="center"></TextView>
            <EditText android:text="" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="fill_parent" android:password="true" android:id="@+id/txtPassword"></EditText>
        </LinearLayout>
        <Button android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:textSize="25dip" android:id="@+id/btnLogin"></Button>
    </LinearLayout>
</LinearLayout>
